kubernetes/2.monitoring/1-Prometheus-deployment/5.prom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom-svc
  namespace: monitoring
  labels:
    app: prom-svc
spec:
  ports:
    - port: 9090
  selector:
    app: prom
