kubernetes/2.monitoring/1-Prometheus-deployment/6.prom-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prom.ramanuj.dev
      secretName: prom-tls
  rules:
    - host: prom.ramanuj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-svc
                port:
                  number: 9090
